--- a/css/style.less
+++ b/css/style.less
@@ -1,2 +1,74 @@
 // compress: true
 
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    background-color: #162831;
+    position: static;
+    color: #fff;
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p,
+i {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+
+
+}
+
+img {
+    margin: 0;
+    padding: 0;
+}
+
+// Fonts
+
+@font-face {
+    font-family: "El Messiri";
+    src: url("../fonts/ElMessiri-Bold.ttf") format("truetype");
+    font-weight: 700;
+}
+
+
+@font-face {
+    font-family: "Raleway";
+    src: url("../fonts/Raleway-Regular.ttf") format("truetype"),
+        url("../fonts/Raleway-Light.ttf") format("truetype"),
+        url("../fonts/Raleway-SemiBold.ttf") format("truetype"),
+        url("../fonts/Raleway-Bold.ttf") format("truetype");
+}
+
+
+// Blocks
+
+@import "blocks/container.less";
+@import "blocks/nav.less";
+@import "blocks/helpers.less";
